Bug 661889 - Wrap notification buttons onto a second row instead of cropping the overflow [r=vingtetun]
UltraBlame original commit: 830f03c194a9b91242e08e269bbd85c6e4c9a54c

--- a/mobile/themes/core/notification.css
+++ b/mobile/themes/core/notification.css
@@ -28,5 +28,6 @@ notification .outset {
 }
 
 notification .buttons {
-  padding: @padding_normal@;
+  display: block; 
+  padding: @padding_normal@ @padding_normal@ 0 @padding_normal@;
 }
