--- a/mobile/themes/core/platform.css
+++ b/mobile/themes/core/platform.css
@@ -766,3 +766,9 @@ dialog {
     padding: @padding_xlarge@ 0px;
   }
 }
+
+
+
+notification > button {
+  margin-bottom: @margin_normal@;
+}
